# beam-shader-mvp

./: Cargo.toml  README.md  rust-toolchain.toml
_faucet-cpp/: contract.cpp
app/: Cargo.toml
app/src/: do_thing.rs  get_main_method_params.rs  lib.rs  main_method.rs  method_0.rs  method_1.rs  panic_handler.rs  util.rs
app/src/main_events/: manager_create.rs  manager_destroy.rs  mod.rs
app/src/methods/: get_main_method_params.rs  main_method.rs  mod.rs
app/src/methods/main_method_events/: manager_create.rs  manager_destroy.rs  manager_view.rs  manager_view_account.rs  manager_view_accounts.rs  manager_view_funds.rs  manager_view_params.rs  mod.rs  my_account_deposit.rs  my_account_view.rs  my_account_withdraw.rs
app/src/util/: doc_writer.rs  dump_accounts.rs  main_event.rs  mod.rs  my_account_move.rs  should_run_params.rs
beam_bvm_interface/: cargo.toml
beam_bvm_interface/src/: lib.rs
common/: Cargo.toml
common/src/: contract_sid.rs  lib.rs  params.rs  types.rs
contract/: Cargo.toml
contract/src/: accept_trade.rs  create_trade.rs  ctor.rs  deposit.rs  dtor.rs  get_trades.rs  lib.rs  panic_handler.rs  remove_trade.rs  withdraw.rs
faucet-contract/: Cargo.toml
faucet-contract/src/: ctor.rs  deposit.rs  lib.rs  state.rs  types.rs
faucet-cpp/: app.cpp  app.wat  app_undef.cpp  contract.wat
faucet2-cpp/: app.cpp  common.h  contract.cpp
shared/: Cargo.toml
shared/src/: lib.rs  params.rs  types.rs
